[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/ladder.png" type="Texture" id=1]
[ext_resource path="res://MapElements/Ladder.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 1 )

[node name="Ladder" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 1 )

[node name="LadderTop" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="TopCol" type="CollisionShape2D" parent="LadderTop"]
shape = SubResource( 2 )

[node name="LadderBot" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="BottomCol" type="CollisionShape2D" parent="LadderBot"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_exited" from="." to="." method="body_exited"]
